<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.training.center.gerasinaes</groupId>
    <artifactId>epam-test-auto-autumn-oct-2021</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!--        <testng.configs.path>${project.build.testOutputDirectory}/com/epam/tc/exercise1/</testng.configs.path>-->
        <!--        <testng.suite.file>${testng.configs.path}/exercise1.class.suite.xml</testng.suite.file>-->
        <checkstyle.version>8.42</checkstyle.version>
        <testng.version>7.4.0</testng.version>
        <assetj.version>3.21.0</assetj.version>
        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
        <aspectj.version>1.9.5</aspectj.version>
        <allure.version>2.14.0</allure.version>
        <cucumber-testng.version>7.0.0</cucumber-testng.version>
        <cucumber-java.version>7.0.0</cucumber-java.version>
    </properties>

    <profiles>
        <profile>
            <id>hw1-all-calculator-test-suite</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/AllCalculatorTestSuite.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>hw1-add-sub-calculator-test-suite</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/AddSubtractTestSuite.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>hw1-multiply-divide-test-suite</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/MultiplyDivideTestSuite.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>all-jdi-site-test-suite</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/hw2/AllTestsJdiTesting.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>start-page-test</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/hw2/StartPageTest.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>inner-page-test-suite</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/hw2/InnerPageTest.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>all-page-object-jdi-tests</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/hw3/AllTestsJdiTesting.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>start-page-object-jdi-test</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/hw3/StartPageTest.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>inner-page-object-jdi-test-suite</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/hw3/InnerPageTest.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>all-page-object-jdi-tests-with-steps</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/hw4/AllTestsJdiTesting.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>start-page-object-jdi-test-with-steps</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/hw4/StartPageTest.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>inner-page-object-jdi-test-suite-with-steps</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/hw4/InnerPageTest.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>page-object-jdi-test-suite-with-steps-broken</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/hw4/StartPageBrokenTest.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>cucumber-jdi-site-tests</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/com/epam/tc/hw5/AllCucumberTestSuite.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>start-page-jdi-test-grid</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/hw6/StartPageTest.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>inner-page-jdi-test-grid</id>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/hw6/InnerPageTest.xml
                </suite.xml.name>
            </properties>
        </profile>
        <profile>
            <id>all-jdi-tests-grid</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <suite.xml.name>
                    ${project.basedir}/src/test/resources/hw6/AllTestsJdiTesting.xml
                </suite.xml.name>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assetj.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.epam.tat.module4</groupId>
            <artifactId>calculator</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/resources/calculator-1.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.141.59</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber-java.version}</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${cucumber-testng.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>
                        <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
                        https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
                    </configLocation>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                    <argLine>
                        --illegal-access=permit
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <suiteXmlFiles>${suite.xml.name}</suiteXmlFiles>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
                <configuration>
                    <reportVersion>${allure.version}</reportVersion>
                </configuration>
            </plugin>
        </plugins>
    </reporting>


</project>